<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:hint="@string/etPeso"
        android:inputType="number"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvwPeso"
        app:layout_constraintTop_toBottomOf="@+id/etEstatura" />

    <TextView
        android:id="@+id/tvwNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:text="@string/tvwNombre"
        app:layout_constraintBottom_toTopOf="@+id/tvwEdad"
        app:layout_constraintEnd_toStartOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvwEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="36dp"
        android:text="@string/tvwEdad"
        app:layout_constraintBottom_toTopOf="@+id/tvwEstatura"
        app:layout_constraintEnd_toStartOf="@+id/etEdad"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/etEdad"
        android:textStyle="italic"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etEstatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvwEdad" />

    <TextView
        android:id="@+id/tvwEstatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="7dp"
        android:text="@string/tvwEstatura"
        app:layout_constraintEnd_toStartOf="@+id/etEstatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEstatura" />

    <EditText
        android:id="@+id/etEstatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/etEstatura"
        android:inputType="number"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvwEstatura"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvwPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:text="@string/tvwPeso"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPeso"
        app:layout_constraintEnd_toStartOf="@+id/etPeso"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bttCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/bttCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:textStyle="italic"
        android:hint="@string/etNombre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvwNombre" />

    <TextView
        android:id="@+id/tvwIMcResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="IMC"
        app:layout_constraintStart_toStartOf="@+id/tvwImc"
        app:layout_constraintTop_toBottomOf="@+id/tvwImc" />

    <TextView
        android:id="@+id/tvwTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/tvwTitulo"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bttResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/BttResultados"
        app:layout_constraintBaseline_toBaselineOf="@+id/bttGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bttGuardar" />

    <Button
        android:id="@+id/bttGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="48dp"
        android:text="@string/bttGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttResultados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwResultadoDescrp" />

    <TextView
        android:id="@+id/tvwImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="29dp"
        android:text="Tu IMC es:"
        app:layout_constraintEnd_toEndOf="@+id/bttCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttCalcular" />

    <TextView
        android:id="@+id/tvwResultadoDescrp"
        android:layout_width="313dp"
        android:layout_height="117dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Descripcion: "
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/tvwIMcResultado"
        app:layout_constraintTop_toBottomOf="@+id/tvwIMcResultado" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>